# Code1C-Refact-En2Ru

./: CodeRefact.py  Config.json  README.md  RefactoringRules.json  function_names.json  main.py  pyproject.toml  refactoring.py  refactoring_rules.json  run.bat.sample
